# bridger

./: .gitignore
dataprocess/: .dockerignore  README.md  notes.md  notes_update.md  pyproject.toml  requirements.txt
dataprocess/beaker/: Dockerfile  README.md  api-download-author-info-conf.yaml  combine-term-embeddings-beaker.conf.yaml  fetch_author_distances_results.py  final-processing-embeddings-beaker-conf.yaml  final-processing-embeddings-update-beaker-conf.yaml  final-processing-terms-beaker-conf.yaml  final-processing-terms-update-beaker-conf.yaml  format-scierc-beaker-conf.yaml  format-scierc-entrypoint.sh  format_scierc_submit_beaker_jobs.py  get-author-top-terms-beaker-conf-min-year-2012.yaml  get-author-top-terms-beaker-conf-min-year-2017.yaml  get-avg-embeddings-beaker-conf-min-year-2012.yaml  get-avg-embeddings-beaker-conf.yaml  get-avg-specter-beaker-conf-min-year-2012.yaml  get-avg-specter-beaker-conf-min-year-2017.yaml  get-persona-clusters-beaker-conf-min-year-2017.yaml  get-persona-clusters-beaker-conf.yaml  get-persona-top-terms-beaker-conf-min-year-2012.yaml  get-persona-top-terms-beaker-conf-min-year-2017.yaml  get-sentence-transformer-embeddings-beaker-conf.yaml  normalize-ner-beaker-conf.yaml  normalize-terms-entrypoint.sh  parse_ner_preds_submit_beaker_jobs.py  pl-marker-update-papers-beaker-conf.yaml  run-merge-old-and-new-paper-authors-beaker-conf.yaml  run-update-script-00-conf.yaml  run-update-script-01-conf.yaml  run_update_script_00_entrypoint.sh  run_update_script_01_entrypoint.sh  submit_beaker_experiments_get_dists.py  (+3 more)
(+32 files in other folders)
